--- a/TODO
+++ b/TODO
@@ -2,16 +2,15 @@ valgrind --leak-check=full ./run
 
 practice iterator while loops
 
-Collectable:
-Should give buff to player
-
 
 Lighting:
 lightRenderer class to render multiple lights at once
 
 Player:
 light intensity changes w/ energy left
+fix player state detection
 jumping scales correctly with unitSize
+
 
 LevelManager:
 load collectables from level file
@@ -23,3 +22,7 @@ probably move player-wall collision detection into generic class to reuse w/ ene
 Low Prio:
 better XML
 Cool background. I think falling, rotating squares w/ parallax layers.
+have lights follow player like lerp/slerp
+
+Collectable:
+circles around player
