player death and restart prompt

--- a/TODO
+++ b/TODO
@@ -1,19 +1,18 @@
 valgrind --leak-check=full ./run
 
 Project 5 completion:
-player should explode and reappear (explode on death and reset level)
 should display use of object pooling in HUD
 
 practice iterator while loops
 look into blitting light polygon shape onto an image to render on GPU
 - same with UI elements, seems like sdl primitive draw funcs are super slow
+- CUDA example from class
 https://stackoverflow.com/questions/20070155/how-to-set-a-pixel-in-a-sdl-surface
 
 Background:
 do something with background image
 
 Collectable:
-time limit to explosion?
 
 Enemies:
 should fall if able, or don't go off an edge
