--- a/TODO
+++ b/TODO
@@ -1,8 +1,5 @@
 valgrind --leak-check=full ./run
 
-Project 5 completion:
-should display use of object pooling in HUD
-
 practice iterator while loops
 look into blitting light polygon shape onto an image to render on GPU
 - same with UI elements, seems like sdl primitive draw funcs are super slow
@@ -12,13 +9,9 @@ https://stackoverflow.com/questions/20070155/how-to-set-a-pixel-in-a-sdl-surface
 Background:
 do something with background image
 
-Collectable:
-
 Enemies:
 should fall if able, or don't go off an edge
 on death should... implode? O.o
-
-Player:
 
 LevelManager:
 More robust so we can differentiate player, collectable and enemy spawn coords
@@ -33,7 +26,7 @@ Walls have width?
 Music
 Sound
 have lights follow player via some slerp function (flocking?)
-slowly regain energy
+smoothly regain and lose energy
 
 === End of "Need to Do" ===
 
@@ -49,4 +42,3 @@ Bugs:
 crashed when hit the ceiling too hard
 player can fall through floors at a certain velocity
 jumping/flying depends on frame rate
-memory leak with collectables in levelManager
