moved enemies to LM & they explode on death

--- a/TODO
+++ b/TODO
@@ -6,13 +6,6 @@ look into blitting light polygon shape onto an image to render on GPU
 - CUDA example from class
 https://stackoverflow.com/questions/20070155/how-to-set-a-pixel-in-a-sdl-surface
 
-Background:
-do something with background image
-
-Enemies:
-should fall if able, or don't go off an edge
-on death should... implode? O.o
-
 LevelManager:
 More robust so we can differentiate player, collectable and enemy spawn coords
 
@@ -25,8 +18,10 @@ don't stop camera from following along edges of the map
 Walls have width?
 Music
 Sound
+do something with background image.
 have lights follow player via some slerp function (flocking?)
 smoothly regain and lose energy
+cancel explosion method
 
 === End of "Need to Do" ===
 
@@ -37,6 +32,7 @@ potentially a way to combine lightPolygons so that there is only one pass over
 tiling background so that it doesn't glitch to hell for tall maps
 if adding slerp functionality to movement then that will help prevent falling through
   walls durring heavy lag (i.e. valgrind)
+player inherit from SmartSprite or other way around
 
 Bugs:
 crashed when hit the ceiling too hard
