--- a/TODO
+++ b/TODO
@@ -5,6 +5,12 @@ look into blitting light polygon shape onto an image to render on GPU
 - CUDA example from class
 https://stackoverflow.com/questions/20070155/how-to-set-a-pixel-in-a-sdl-surface
 
+Lighting/collectable:
+if collectable is within x units of viewport then start updating it. 
+I think viewport position starts off a 0,0 which is when lighting is first initialized. light should determine if walls are within x units of itself (not the play) and update based on that. just need to add extra param to LevelManager::withinRenderDistance
+
+each enemy, collectable, light may need it's own list of walls to compute from?
+
 Polish:
 plug all of the leaks
 more ballanced jumping 
@@ -20,7 +26,6 @@ smoothly regain and lose energy
 cancel explosion method
 
 === End of "Need to Do" ===
-
 Things to consider:
 object pooling for walls (when levels get larger)
 potentially a way to combine lightPolygons so that there is only one pass over
