--- a/TODO
+++ b/TODO
@@ -8,10 +8,12 @@ https://stackoverflow.com/questions/20070155/how-to-set-a-pixel-in-a-sdl-surface
 Final Reqs:
 music
 sound
+ending sprite
+complete level design
 
 HUD:
-- dynamic width
 - color controls
+- render order
 
 Polish:
 more ballanced jumping 
@@ -28,10 +30,14 @@ if adding slerp functionality to movement then that will help prevent falling th
   walls durring heavy lag (i.e. valgrind)
 player inherit from SmartSprite or other way around
 each enemy, collectable, light may need it's own list of walls to compute from?
-
 potentially remove vertices shared by 2 walls. May have to create some massive polygon
   for all connected walls though.
 Walls have width (turns out, super easy just need to update collision det.)
+multiple hudManagers, each level specific with one master manager for pause menu. 
+  Split them up into screen and world dependent menus
+  - or - could put menus into strings/*levelname*/*menuname* and then load the menus
+  specific to each level to reduce loops and checks for menus that will never load
+  outside of a specific level
 
 Bugs:
 jumping/flying depends on frame rate
