--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ complete level design
 HUD:
 - color controls
 - render order
+- exclusion (i.e. pause and next level)
 
 Polish:
 more ballanced jumping 
@@ -22,8 +23,15 @@ lights don't clip through walls
 cancel explosion method
 
 Lighting:
-Have it fade further away from player. Will allow me to reduce number of loops in lighting, add to immersion/lost feeling, and work well with fading sprites. (whats more expensive: calcing if point is w/in radius of circle or hashing 2 intersecting points on x axis of the circle, looking it up & adding offset)
-fading sprites doesn't seem to have much affect on FPS. could add check to see if far enough away to update, but not sure if updateTexture is that expensive.
+Experiment - whats more expensive: calcing if point is w/in radius of circle -or-
+  hashing 2 intersecting points on x axis of the circle, looking it up & adding 
+  offset
+
+Sprites:
+fading sprites doesn't seem to have much affect on FPS. could add check to see if far 
+  enough away to update, but not sure if updateTexture is that expensive.
+add fade to collectable. probably just make it function of Drawable.
+maybe add to bg sprites as well
 
 === End of "Need to Do" ===
 Things to consider:
