--- a/TODO
+++ b/TODO
@@ -17,18 +17,19 @@ HUD:
 - exclusion (i.e. pause and next level)
 
 Polish:
-more ballanced jumping 
+more ballanced jumping
 have lights follow player via some slerp function (flocking?)
 lights don't clip through walls
 cancel explosion method
 
 Lighting:
 Experiment - whats more expensive: calcing if point is w/in radius of circle -or-
-  hashing 2 intersecting points on x axis of the circle, looking it up & adding 
+  hashing 2 intersecting points on x axis of the circle, looking it up & adding
   offset
+Have light intensity pulse with the sprite 
 
 Sprites:
-fading sprites doesn't seem to have much affect on FPS. could add check to see if far 
+fading sprites doesn't seem to have much affect on FPS. could add check to see if far
   enough away to update, but not sure if updateTexture is that expensive.
 add fade to collectable. probably just make it function of Drawable.
 maybe add to bg sprites as well
@@ -36,7 +37,7 @@ maybe add to bg sprites as well
 === End of "Need to Do" ===
 Things to consider:
 potentially a way to combine lightPolygons so that there is only one pass over
-  the x coordinates of the viewport. it is definitely the looping over screen pixels 
+  the x coordinates of the viewport. it is definitely the looping over screen pixels
   that is causing the lag, not just the draw function
 if adding slerp functionality to movement then that will help prevent falling through
   walls durring heavy lag (i.e. valgrind)
@@ -45,7 +46,7 @@ each enemy, collectable, light may need it's own list of walls to compute from?
 potentially remove vertices shared by 2 walls. May have to create some massive polygon
   for all connected walls though.
 Walls have width (turns out, super easy just need to update collision det.)
-multiple hudManagers, each level specific with one master manager for pause menu. 
+multiple hudManagers, each level specific with one master manager for pause menu.
   Split them up into screen and world dependent menus
   - or - could put menus into strings/*levelname*/*menuname* and then load the menus
   specific to each level to reduce loops and checks for menus that will never load
