--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ music
 sound
 ending sprite
 don't forget to display name for video
+enemies should appear in the right spot D:
 
 Polish:
 more ballanced jumping
